--- a/robinson.tish/AnimalTracker.html
+++ b/robinson.tish/AnimalTracker.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <base href="https"
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Animal Tracker</title>
 
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
-   <link rel="stylesheet" href="/app.css">
+   <link rel="stylesheet" href="css/app.css">
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
@@ -39,7 +40,7 @@
    </section>
 
 
-   <section data-role="page" id="recent-page">
+  <!-- <section data-role="page" id="recent-page">
       <div data-role="main">
          MAP!
       </div>
@@ -56,8 +57,8 @@
          <h1>Search</h1>
       </header>
       <div data-role="main">
-         <!-- ul>li*10>a[href=#animal-profile-page]>{Animal $} -->
-         <ul>
+          ul>li*10>a[href=#animal-profile-page]>{Animal $} -->
+        <!-- <ul>
             <li><a href="#animal-profile-page">Animal 1</a></li>
             <li><a href="#animal-profile-page">Animal 2</a></li>
             <li><a href="#animal-profile-page">Animal 3</a></li>
@@ -90,7 +91,7 @@
          <a href="#list-page">List</a>
          <a href="#user-profile-page">Profile</a>
       </footer>
-   </section>
+   </section>-->
 
 
    <section data-role="page" id="animal-profile-page">
