--- a/robinson.tish/Module 04- jQuery Mobile/AnimalTracker.html
+++ b/robinson.tish/Module 04- jQuery Mobile/AnimalTracker.html
@@ -6,7 +6,7 @@
    <title>Animal Tracker</title>
 
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
-   <link rel="stylesheet" href="/app.css">
+   <link rel="stylesheet" href="app.css">
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
@@ -39,7 +39,7 @@
    </section>
 
 
-   <section data-role="page" id="recent-page">
+  <!-- <section data-role="page" id="recent-page">
       <div data-role="main">
          MAP!
       </div>
@@ -48,16 +48,16 @@
          <a href="#list-page">List</a>
          <a href="#user-profile-page">Profile</a>
       </footer>
-   </section>
+   </section>-->
 
 
-   <section data-role="page" id="list-page">
+  <!-- <section data-role="page" id="list-page">
       <header data-role="header">
          <h1>Search</h1>
       </header>
-      <div data-role="main">
+      <div data-role="main">-->
          <!-- ul>li*10>a[href=#animal-profile-page]>{Animal $} -->
-         <ul>
+        <!-- <ul>
             <li><a href="#animal-profile-page">Animal 1</a></li>
             <li><a href="#animal-profile-page">Animal 2</a></li>
             <li><a href="#animal-profile-page">Animal 3</a></li>
@@ -68,8 +68,8 @@
             <li><a href="#animal-profile-page">Animal 8</a></li>
             <li><a href="#animal-profile-page">Animal 9</a></li>
             <li><a href="#animal-profile-page">Animal 10</a></li>
-         </ul>
-      </div>
+         </ul>-->
+     <!-- </div>
       <footer data-role="footer">
          <a href="#recent-page">Recent</a>
          <a href="#list-page">List</a>
@@ -101,7 +101,7 @@
       <div data-role="main">
          Animal Profile
       </div>
-   </section>
+   </section>-->
 
 </body>
 </html>
