--- a/robinson.tish/Module 04- jQuery Mobile/index.html
+++ b/robinson.tish/Module 04- jQuery Mobile/index.html
@@ -6,7 +6,7 @@
    <title>Animal Tracker</title>
 
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
-   <link rel="stylesheet" href="/app.css">
+   <link rel="stylesheet" href="css/app.css">
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
