--- a/robinson.tish/AnimalTracker.html
+++ b/robinson.tish/AnimalTracker.html
@@ -7,7 +7,7 @@
    <title>Animal Tracker</title>
 
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
-   <link rel="stylesheet" href="css/app.css">
+   <link rel="stylesheet" href="/app.css">
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
@@ -17,8 +17,10 @@
 </head>
 <body>
 
-
+ <!--<img src="img/butterflyapplogo.png" alt="butterfly">-->
    <section data-role="page" id="signin-page">
+       <img src="img/butterflyapplogo.png" alt="butterfly"  width="200" height="200">
+
       <div data-role="main" class="display-flex flex-vertical">
          <div class="flex-stretch"></div>
          <div class="flex-none">
