--- a/robinson.tish/AnimalTracker.html
+++ b/robinson.tish/AnimalTracker.html
@@ -19,7 +19,7 @@
 
  <!--<img src="img/butterflyapplogo.png" alt="butterfly">-->
    <section data-role="page" id="signin-page">
-       <img src="img/butterflyapplogo.png" alt="butterfly"  width="200" height="200">
+       <img src="img/butterflyapplogo.png" alt="butterfly"  width="350" height="350">
 
       <div data-role="main" class="display-flex flex-vertical">
          <div class="flex-stretch"></div>
@@ -40,6 +40,113 @@
          </div>
       </div>
    </section>
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Animal Tracker</title>
+
+   <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
+   <link rel="stylesheet" href="css/app.css">
+
+   <script src="lib/js/jquery-2.2.4.min.js"></script>
+
+   <script src="js/app.js"></script>
+
+   <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
+</head>
+<body>
+
+
+   <section data-role="page" id="signin-page">
+      <div data-role="main" class="display-flex flex-vertical">
+         <div class="flex-stretch"></div>
+         <div class="flex-none">
+            <form class="form" id="signin-form" data-ajax="false" style="padding:1em">
+               <div class="form-control">
+                  <label for="signin-username" class="form-label">Username</label>
+                  <input class="form-input" type="text" id="signin-username" data-role="none">
+               </div>
+               <div class="form-control">
+                  <label for="signin-password" class="form-label">Password</label>
+                  <input class="form-input" type="password" id="signin-password" data-role="none">
+               </div>
+               <div class="form-control">
+                  <a href="#recent-page" class="form-button">Sign In</a>
+               </div>
+            </form>
+         </div>
+      </div>
+   </section>
+
+
+   <section data-role="page" id="recent-page">
+      <div data-role="main">
+         MAP!
+      </div>
+      <footer data-role="footer">
+         <a href="#recent-page">Recent</a>
+         <a href="#list-page">List</a>
+         <a href="#user-profile-page">Profile</a>
+      </footer>
+   </section>
+
+
+   <section data-role="page" id="list-page">
+      <header data-role="header">
+         <h1>Search</h1>
+      </header>
+      <div data-role="main">
+         <!-- ul>li*10>a[href=#animal-profile-page]>{Animal $} -->
+         <ul>
+            <li><a href="#animal-profile-page">Animal 1</a></li>
+            <li><a href="#animal-profile-page">Animal 2</a></li>
+            <li><a href="#animal-profile-page">Animal 3</a></li>
+            <li><a href="#animal-profile-page">Animal 4</a></li>
+            <li><a href="#animal-profile-page">Animal 5</a></li>
+            <li><a href="#animal-profile-page">Animal 6</a></li>
+            <li><a href="#animal-profile-page">Animal 7</a></li>
+            <li><a href="#animal-profile-page">Animal 8</a></li>
+            <li><a href="#animal-profile-page">Animal 9</a></li>
+            <li><a href="#animal-profile-page">Animal 10</a></li>
+         </ul>
+      </div>
+      <footer data-role="footer">
+         <a href="#recent-page">Recent</a>
+         <a href="#list-page">List</a>
+         <a href="#user-profile-page">Profile</a>
+      </footer>
+   </section>
+
+
+   <section data-role="page" id="user-profile-page">
+      <div data-role="main">
+         Profile
+         <p>
+            <a href="#signin-page">Sign Out</a>
+         </p>
+      </div>
+      <footer data-role="footer">
+         <a href="#recent-page">Recent</a>
+         <a href="#list-page">List</a>
+         <a href="#user-profile-page">Profile</a>
+      </footer>
+   </section>
+
+
+   <section data-role="page" id="animal-profile-page">
+      <header data-role="header">
+         <h1>Search</h1>
+         <a href="#" data-rel="back">Back</a>
+      </header>
+      <div data-role="main">
+         Animal Profile
+      </div>
+   </section>
+
+</body>
+</html>
 
 
   <!-- <section data-role="page" id="recent-page">
