updated butterfly logo

--- a/robinson.tish/AnimalTracker.html
+++ b/robinson.tish/AnimalTracker.html
@@ -7,7 +7,7 @@
    <title>Animal Tracker</title>
 
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
-   <link rel="stylesheet" href="/app.css">
+   <link rel="stylesheet" href="css/app.css">
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
@@ -91,62 +91,6 @@
          <a href="#user-profile-page">Profile</a>
       </footer>
    </section>
-
-
-   <section data-role="page" id="list-page">
-      <header data-role="header">
-         <h1>Search</h1>
-      </header>
-      <div data-role="main">
-         <!-- ul>li*10>a[href=#animal-profile-page]>{Animal $} -->
-         <ul>
-            <li><a href="#animal-profile-page">Animal 1</a></li>
-            <li><a href="#animal-profile-page">Animal 2</a></li>
-            <li><a href="#animal-profile-page">Animal 3</a></li>
-            <li><a href="#animal-profile-page">Animal 4</a></li>
-            <li><a href="#animal-profile-page">Animal 5</a></li>
-            <li><a href="#animal-profile-page">Animal 6</a></li>
-            <li><a href="#animal-profile-page">Animal 7</a></li>
-            <li><a href="#animal-profile-page">Animal 8</a></li>
-            <li><a href="#animal-profile-page">Animal 9</a></li>
-            <li><a href="#animal-profile-page">Animal 10</a></li>
-         </ul>
-      </div>
-      <footer data-role="footer">
-         <a href="#recent-page">Recent</a>
-         <a href="#list-page">List</a>
-         <a href="#user-profile-page">Profile</a>
-      </footer>
-   </section>
-
-
-   <section data-role="page" id="user-profile-page">
-      <div data-role="main">
-         Profile
-         <p>
-            <a href="#signin-page">Sign Out</a>
-         </p>
-      </div>
-      <footer data-role="footer">
-         <a href="#recent-page">Recent</a>
-         <a href="#list-page">List</a>
-         <a href="#user-profile-page">Profile</a>
-      </footer>
-   </section>
-
-
-   <section data-role="page" id="animal-profile-page">
-      <header data-role="header">
-         <h1>Search</h1>
-         <a href="#" data-rel="back">Back</a>
-      </header>
-      <div data-role="main">
-         Animal Profile
-      </div>
-   </section>
-
-</body>
-</html>
 
 
   <!-- <section data-role="page" id="recent-page">
