--- a/robinson.tish/jquerymobile/AnimalTracker.html
+++ b/robinson.tish/jquerymobile/AnimalTracker.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+ <img src="img/butterflyapplogo.png" alt="butterfly"  width="350" height="350">
 
    <section data-role="page" id="signin-page">
       <div data-role="main" class="display-flex flex-vertical">
