--- a/robinson.tish/index.html
+++ b/robinson.tish/index.html
@@ -88,7 +88,7 @@
    <section data-role="page" id="list-page">
       <header data-role="header" role="banner" class="ui-header ui-bar-inheit">
       <h1 class="ui-title" role="heading" aria-level="1">
-         <h1>Butterlfly List</h1>
+         <h1>Butterfly List</h1>
          <ul>
             <li class="flex-stretch"></li>
             <li><a href="#" class="js-list-add-animal"
