I really need to recover all files

--- a/robinson.tish/index.html
+++ b/robinson.tish/index.html
@@ -58,7 +58,7 @@
    </header>
       <div data-role="main">
         <!-- MAP!-->
-   <img src="img/map.png" class="atl" >
+   <img src="img/ATLmap.png" class="atl">
       </div>
       <footer data-role="footer" data-template="#footer-template">
 
