--- a/robinson.tish/index.html
+++ b/robinson.tish/index.html
@@ -11,9 +11,13 @@
    <link rel="stylesheet" href="css/app.css">
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
-
+   
+   <script src="js/function.js"></script>
+   <script src="js/pages.js"></script>
+   <script src="js/parts.js"></script>
    <script src="js/signin.js"></script>
    <script src="js/app.js"></script>
+   //functions.js should always come first, app should come last
 
    <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
 </head>
