--- a/robinson.tish/index.html
+++ b/robinson.tish/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <!-- <base href="http://anotherluvdesign.site/aau/wnm617_02/robinson.tish/index.html"> -->
+
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Butterfly Tracker</title>
@@ -17,7 +17,7 @@
    <script src="js/parts.js"></script>
    <script src="js/signin.js"></script>
    <script src="js/app.js"></script>
-   //functions.js should always come first, app should come last
+   <!--functions.js should always come first, app should come last-->
 
    <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
 </head>
