--- a/robinson.tish/index.html
+++ b/robinson.tish/index.html
@@ -18,8 +18,16 @@
    <script src="js/signin.js"></script>
    <script src="js/app.js"></script>
    <!--functions.js should always come first, app should come last-->
-
    <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN7R837QS1Lka-7e_sfebb1MEA0IIZtGo&libraries=&v=weekly"
+      async
+    ></script>
+
+AIzaSyDN7R837QS1Lka-7e_sfebb1MEA0IIZtGo
+
+
 </head>
 <body>
 
@@ -94,7 +102,7 @@
    <section data-role="page" id="list-page">
       <header data-role="header" role="banner" class="ui-header ui-bar-inheit">
       <h1 class="ui-title" role="heading" aria-level="1">
-         <h1>Butterfly List</h1>
+       q  <h1>Butterfly List</h1>
          <ul>
             <li class="flex-stretch"></li>
             <li><a href="#" class="js-list-add-animal"
