--- a/robinson.tish/index.html
+++ b/robinson.tish/index.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
    
    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/style.css">
+   <!--<link rel="stylesheet" href="css/style.css">-->
 
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
@@ -27,9 +27,9 @@
 
  <!--AIzaSyDN7R837QS1Lka-7e_sfebb1MEA0IIZtGo-->
 
- <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
  <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/44/11a/common.js"></script>
 
+ <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
 
 </head>
 <body>
@@ -41,6 +41,10 @@
 
 <!--Hamiltons-->
 <section data-role="page" id="signin-page">
+ <header data-role="header" role="banner" class="ui-header ui-bar-inheit">
+      <h1 class="ui-title" role="heading" aria-level="1"></h1>
+<h1> Butterfly Tracker</h1>
+</header>
 
 <img src="img/butterflyapplogo.svg" class="butterfly.logo">
       <div data-role="main" class="display-flex flex-vertical">
