--- a/robinson.tish/hamilton.html
+++ b/robinson.tish/hamilton.html
@@ -128,6 +128,9 @@
    <section data-role="page" id="user-profile-page">
       <div data-role="main">
          <div class="profile"></div>
+    <div class="user-profile-image">
+      <img src="https://via.placeholder.com/400/731/fff/?text=USER2" alt>
+      </div>  
 
          <div class="floater top right">
             <a href="#" class="icon" data-activate="#user-settings-modal"><img src="img/icon/shishkabob.svg" alt=""></a>
